# repo-sync

./: .aider.conf.yml  .gitignore  Cargo.toml  README.org  derivation.nix  flake.nix  llms.org  pre-commit-hook
src/: cli.rs  error.rs  git.rs  lib.rs  logger.rs  main.rs  ssh.rs
tests/: integration.rs
