[package]
name = "repo-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = { version = "2.0.17", features = ["color", "color-auto"] }
assert_fs = { version = "1.1.3", features = ["color", "color-auto"] }
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.3"
git2 = "0.20.2"
ssh2 = "0.9.5"
stderrlog = "0.6.0"
tap = "1.0.1"
thiserror = "2.0.12"
