[package]
name = "repo-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# Prevent 36GB target/debug directories.
debug = false

[profile.release]
debug = false
# Disable in CI using CARGO_INCREMENTAL=0.
incremental = true

[dependencies]
assert_cmd = { version = "2.0.17", features = ["color", "color-auto"] }
assert_fs = { version = "1.1.3", features = ["color", "color-auto"] }
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.3"
git2 = "0.20.2"
log = "0.4.27"
ssh-agent-client-rs = "1.1.1"
ssh-key = "0.6.7"
ssh2 = "0.9.5"
stderrlog = "0.6.0"
tap = "1.0.1"
thiserror = "2.0.12"
whoami = "1.6.0"
